--- a/admin-starter/src/main/webapp/includes/menu.xhtml
+++ b/admin-starter/src/main/webapp/includes/menu.xhtml
@@ -42,10 +42,13 @@
 
 			</ul></li>
 		<li><p:link outcome="/assemble-list.jsf">
-				<i class="fa fa-map-marker"></i>
+				<i class="fa fa-calendar"></i>
 				<span>Assembles</span>
 			</p:link></li>
-
+		<li><p:link outcome="/charges-list.jsf">
+				<i class="fa fa-plus"></i>
+				<span>Charges</span>
+			</p:link></li>
 	</ul>
 
 </ui:composition>
