--- a/admin-starter/src/main/webapp/includes/menu.xhtml
+++ b/admin-starter/src/main/webapp/includes/menu.xhtml
@@ -9,7 +9,7 @@
 				<i class="fa fa-home"></i>
 				<span>Accueil</span>
 			</p:link></li>
-		<li class="header">General</li>
+		<li class="header">Géneral</li>
 
 
 
